# shellix

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  local_debug.py  pyproject.toml
shellix/: __main__.py  ai_core.py  memory.py  shell_tool.py  write_tool.py
