[project]
name = "shellix"
version = "0.1.0"
description = "Terminal AI assistant for development"
authors = [
    {name = "Aydar Akhmetzyanov",email = "aydar.tech@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
